# spotify-connect

./: Cargo.toml  LICENCE  README.md
lib/: Cargo.toml
lib/src/: auth.rs  lib.rs  net.rs  proto.rs
src/: auth.rs  main.rs  net.rs  proto.rs
