[package]
name = "spotify-connect"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.spotify-connect-client]
path = "lib"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4.0"
librespot-core = "0.3.1"
librespot-protocol = "0.3.1"
rand = "0.8.5"
rpassword = "6.0.1"
