[package]
name = "spotify-connect"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies.spotify-connect-client]
path = "lib"
version = "0.1.0"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4"
env_logger = "0.10"
librespot-core = "0.4.2"
librespot-protocol = "0.4.2"
log = "0.4"
rpassword = "6"
