[package]
name = "spotify-connect-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.6.0"
aes-ctr = "0.6.0"
base64 = "0.13.0"
hex = "0.4.3"
hmac = "0.12.1"
librespot-core = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
librespot-protocol = { git = "https://github.com/librespot-org/librespot", rev = "fb5c0efdd65d87f1f506b9198227d64370b69f18" }
log = "0.4"
minreq = { version = "2.6", default-features = false, features = ['urlencoding'] }
pbkdf2 = "0.11"
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
sha-1 = "0.10.0"
tokio = "1.17.0"
urlencoding = "2.1"
